--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-* text=auto
-*.js text eol=lf
-*.json text eol=lf
+* text=auto eol=lf
+*.{cmd,[cC][mM][dD]} text eol=crlf
+*.{bat,[bB][aA][tT]} text eol=crlf
+*.svg text eol=lf
